// Define the package for DockingStation class
package src;

// Import necessary packages and classes
import java.util.List;

import src.Vehicle.Vehicle;

// Implement the Location interface
public class DockingStation implements Location {
    // Private instance variables
    private String id;
    private String stationName;
    private List<Vehicle> vehiclesDocked;
    private Integer capacity;
    private List<String> securityFeatures;
    private String maintenanceStatus;

    // Getter methods
    public String getStationId() {
        return id;
    }

    public Integer getCapacity() {
        return capacity;
    }

    public String getStationName() {
        return stationName;
    }

    public List<Vehicle> getVehiclesDocked() {
        return vehiclesDocked;
    }

    public List<String> getsecurityFeatures() {
        return securityFeatures;
    }

    public String getMaintenanceStatus() {
        return maintenanceStatus;
    }

    // Setter methods
    public void setCapacity(Integer capacity) {
        this.capacity = capacity;
    }

    public void setStationId(String id) {
        this.id = id;
    }

    public void setStationName(String stationName) {
        this.stationName = stationName;
    }

    public void setVehiclesDocked(List<Vehicle> vehiclesDocked) {
        this.vehiclesDocked = vehiclesDocked;
    }

    public void setsecurityFeatures(List<String> securityFeatures) {
        this.securityFeatures = securityFeatures;
    }

    public void setMaintenanceStatus(String maintenanceStatus) {
        this.maintenanceStatus = maintenanceStatus;
    }

    /**
     * The function updateVehicleAvailability is used to update the availability of
     * a vehicle.
     */
    public void updateVehicleAvailability() {
        // Implement updateVehicleAvailability logic here
    }

    /**
     * The function updateMaintenanceStatus is used to update the maintenance
     * status.
     */
    public void updateMaintenanceStatus() {
        // Implement updateMaintenanceStatus logic here
    }

    /**
     * The function logData is a placeholder for implementing logic to log data.
     */
    public void logData() {
        // Implement logData logic here
    }

    /**
     * The function "monitorSecurity" returns a Boolean value indicating whether the
     * security is being
     * monitored.
     * 
     * @return The method is returning a Boolean value of false.
     */
    public Boolean monitorSecurity() {
        // Implement monitorSecurity logic here
        return false; // Replace with actual logic
    }

    @Override // Location Interface
    // The `getCurrentLocation()` method is implementing the `getCurrentLocation()` method from the `Location` interface. 
    // placeholder implementation and should be replaced with the actual logic to retrieve the current location of the docking station.
    public String getCurrentLocation() {
        return "dummy";
    }
}
