package src;

import src.User.User;
import src.Vehicle.Vehicle;

public class MobileApp {

    /**
     * Registers a user in the mobile application.
     */
    public void register() {
        // Implementation for user registration
    }

    /**
     * Starts a trip for the specified user and vehicle.
     *
     * @param user    The user starting the trip.
     * @param vehicle The vehicle for the trip.
     */
    public void startTrip(User user, Vehicle vehicle) {
        // Implementation for starting a trip
    }

    /**
     * Ends a trip for the specified user and trip.
     *
     * @param trip The trip to be ended.
     * @param user The user ending the trip.
     */
    public void endTrip(Trip trip, User user) {
        // Implementation for ending a trip
    }

    /**
     * Rates a trip for the specified user and trip.
     *
     * @param trip The trip to be rated.
     * @param user The user rating the trip.
     */
    public void rateTrip(Trip trip, User user) {
        // Implementation for rating a trip
    }

    /**
     * Pays for a trip using the user's wallet and logs the transaction.
     *
     * @param user        The user making the payment.
     * @param vehicle     The vehicle for which the payment is made.
     * @param transaction The transaction details.
     */
    public void payWithWallet(User user, Vehicle vehicle, Transaction transaction) {
        // Implementation for making a payment with a wallet
    }

    /**
     * Displays documentation related to the mobile application.
     */
    public void showDocumentations() {
        // Implementation for displaying documentation
    }

    /**
     * Views the trip history for the specified user.
     *
     * @param user The user for whom the trip history is viewed.
     */
    public void viewHistory(User user) {
        // Implementation for viewing trip history
    }

    /**
     * Reports an issue with the mobile application and provides feedback.
     *
     * @param user            The user reporting the issue.
     * @param supportFeedback The feedback and details about the issue.
     */
    public void reportIssue(User user, SupportFeedback supportFeedback) {
        // Implementation for reporting an issue
    }
}
